--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Ar-ecks</title>
+    <title>Alex Alejo</title>
 </head>
 
 <body>
@@ -367,7 +367,7 @@
                                     2018-2022 <br>
 
                                     <a href="" class="button button--flex button--small button--link ">
-                                        Click aqui si deseas ver mis certificados
+                                        Ver Certificados
                                         <i class="uil uil-angle-right-b button__icon"></i>
                                     </a>
                                 </div>
