--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
                                 class="home__social-icon">
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
+
+                         
+                        <a href="https://api.whatsapp.com/send?phone=+59178820655&text=Hola acabo de ver tu sitio web, Nececito mas informacion!" target="_blank"
+                        class="home__social-icon">
+                            <i class="uil uil-whatsapp"></i>
+                        </a>
                             <!-- <a href=""  target="_blank"  class="home_-social-icon">
                         <i class="uil uil-dribbble"></i>
                     </a> -->
