--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML, CSS, JavaScript, portafolio, desarrollo web, sitio web, paginaweb, desarrollador web, bolivia, sistemas, ">
+    <meta name="description" content="Hola mi nombre es Alex Alejo, puedo ayudarte desarrollando tu sitio o sistema web, en mi pagina puedes ver mas sobre mi ">
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
     <!--==================== SWIPER CSS ====================-->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css">
+    
+<link rel="shortcut icon" type="image/x-icon" href="/assets/img/1661009410.ico">
+
     <title>Alex Alejo</title>
 </head>
 
